# flexELA

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/: codecov.yml
.github/workflows/: CI_Testing.yml  Docs_Upload.yml
doc/: Building.md  Doxyfile  OutputFiles.md  footer.html  refs.bib
doc/api/: Doxyfile
doc/dev/: Doxyfile
doc/internal/: Doxyfile
src/: CMakeLists.txt  ELA.cpp  ELA.h  ELA_Output.cpp  ELA_Output.h  ELA_Solver.cpp  ELA_Solver.h  globalVariables.h  init.cpp  naming.h
src/checkpoint/: CMakeLists.txt  checkpoint.cpp  checkpoint.h  header.cpp  header.h
src/checkpoint/tests/: CMakeLists.txt  checkpoint_test.cpp  header_test.cpp
src/domain/: CMakeLists.txt  compression.cpp  compression.h  domain.cpp  domain.h  fields.h  mpidomain.cpp  mpidomain.h
src/domain/tests/: CMakeLists.txt  compression_test.cpp  domain_test.cpp  fields_test.cpp  mpi_test.cpp
src/fortran/: CMakeLists.txt  ELA_Output_f.cpp  ELA_Solver_f.cpp  ELA_f.cpp  fortran.h
src/output/: CMakeLists.txt  asciilog.cpp  asciilog.h  output.h  vtm.cpp  vtm.h  vv.cpp  vv.h
src/output/tests/: CMakeLists.txt  output_serial_test.cpp  output_test.cpp
src/solver/: CMakeLists.txt  solver.cpp  solver.h
src/solver/tests/: CMakeLists.txt  solver_test.cpp
src/svector/: CMakeLists.txt  element.h  svector.cpp  svector.h  types.h
src/svector/tests/: CMakeLists.txt  element_test.cpp  svector_test.cpp
src/tests/: CMakeLists.txt  init_test.cpp  solver_test.cpp
tests/: CMakeLists.txt  solver_test.cpp
tests/cpp/: CMakeLists.txt  init_test.cpp  solver_test.cpp  twodimvortex_test.cpp
tests/fortran/: CMakeLists.txt  init_test.f90
